<resources>
    <string name="app_name">Com AIU</string>
    <string name="admission">Admission</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change course</string>
    <string name="course">Course</string>
    <string name="courses">Courses</string>
    <string name="connection_error">Ошибка подключения</string>
    <string name="credentials_error">Неправильный логин или пароль</string>
    <string name="exam_rules">Exam rules</string>
    <string name="email_error">Write id</string>
    <string name="graduate_research">Graduate research</string>
    <string name="hide_desc">Hide description</string>
    <string name="login">login</string>
    <string name="lunch">LUNCH</string>
    <string name="next">Next</string>
    <string name="overview">Overview</string>
    <string name="password_error">Write password</string>
    <string name="previous">Previous</string>
    <string name="select">Select</string>
    <string name="show_desc">Show description</string>
    <string name="swipe">Swipe left or right twice if data is not shown</string>
    <string name="update">Update</string>
    <string name="this_function">This function is under development</string>
    <string name="write_id">Write your ID</string>
    <string name="write_pass">Write password</string>
    <string name="write_login">Write id or password</string>
    <string name="first_a">1st - A</string>
    <string name="first_b">1st - B</string>
    <string name="second_a">2nd - A</string>
    <string name="second_b">2nd - B</string>
    <string name="third">3rd</string>
    <string name="forth">4th</string>
    <string name="title_ams">AMS</string>
    <string name="title_final">Final</string>
    <string name="title_home">Home</string>
    <string name="title_midterm">Midterm</string>
    <string name="title_news">News</string>
    <string name="title_timetable">Timetable</string>
    <string name="title_exam">Exams</string>
    <string name="aiu">Ala-Too International University</string>
    <string name="bachelor">Bachelor program</string>
    <string name="computer_science_dep">Computer Science Department</string>
    <string name="contact_us">Contact us</string>
    <string name="exit">Exit</string>
    <string name="labs">Labs</string>
    <string name="master_degree">Master degree</string>
    <string name="stuff">Department Stuff</string>
    <string name="academic_calendar">Academic calendar</string>
    <string name="what_is_cs">What is Computer Science</string>
    <string name="cs_short_description">
        Computers and the Internet are having a great impact on human life and on society.
        Our lives, starting in the second half of the twentieth century, have become computerized "at the speed of light."
        We now live in times referred to as the computer age, the information age, or the Internet age.
        The Computer Engineering Department offers a unique opportunity for bright young minds to excel themselves in the areas of computer science, computer software, and computer hardware.
    </string>
    <string name="our_vision">Our vision</string>
    <string name="vision_first">to develop research projects that will receive international recognition</string>
    <string name="vision_second">to engage our students in those projects that will enable them to find jobs easily all over the world</string>
    <string name="our_mission">Our mission</string>
    <string name="master_joint">Joint Master\'s Program in Informatics</string>
    <string name="master_joint_info">The Kyrgyz-German Faculty of Applied Informatics announces a recruitment for a joint master\'s program in cooperation with KSUSTA, IU Ala-Too and the Western Saxon University of Applied Sciences Zwickau in the following profiles:</string>
    <string name="master_first">Designing of international software systems</string>
    <string name="master_first_description">This profile is based on the Master\'s Program in Informatics at the Western Saxon University of Applied Sciences Zwickau, with an emphasis on software development. The content is also adapted to the needs of local enterprises that work in large software development and have a high demand for software developers at the master\'s level. During the preparation of the curricula, discussions and negotiations were held with managers in the field of development and management of numerous companies and organizations. Language training and intercultural training can successfully work in international teams. Training is provided in English, German and Russian.</string>
    <string name="master_second">Entrepreneurship in the field of information technology</string>
    <string name="master_second_description">The profile is business-oriented, the purpose of which is to provide students with software products with commercial exploitation and associated organizational structures, as well as the necessary managerial skills. The content of the curriculum facilitates the transfer of knowledge and technology to the economy of Kyrgyzstan and the strengthening of the existing IT industry both nationally and internationally. This profile focuses on the technical basics of software development, business components for the exploitation of inventions, intercultural aspects and language training. Practical modules of the 2nd and 3rd semesters will allow the graduates to successfully create and implement new projects within the existing enterprise. Training is provided in English, German and Russian.</string>
    <string name="master_term">Normative term of study:</string>
    <string name="master_term_year">Master\'s degree - 3 years.</string>
    <string name="master_with_support">With support:</string>
    <string name="master_form_of_study">Form of study:</string>
    <string name="master_evening">Evening</string>
    <string name="master_schedule_of_classes">Schedule of classes:</string>
    <string name="master_schedule_one">Monday: 18:30 – 20:30 (KGUSTA)</string>
    <string name="master_schedule_two">Tuesday: 18:30 – 20:30 (KGUSTA)</string>
    <string name="master_schedule_three">Wednesday: 18:30 – 20:30 (KGUSTA)</string>
    <string name="master_schedule_four">Saturday: 09:30 – 12:30 (AIU)</string>
    <string name="master_graduate_header">Competition for the support of graduate students, applicants and PhD-doctoral students</string>
    <string name="master_graduate_project_daad">Project DAAD "Kyrgyz-German Faculty of Applied Informatics (KGFPI)":</string>
    <string name="master_graduate_project_daad_description">Within the framework of the DAAD project "Kyrgyz-German Faculty of Applied Informatics", implemented between 2016 and 2019, a competition is announced among teachers and young scientists of the International University Alatoo and KSUSTA for research in the Kyrgyz-German Faculty of Applied Informatics and the Western Saxon University Zwickau (WHZ).</string>
    <string name="master_graduate_aim">Aim:</string>
    <string name="master_graduate_aim_description">The goal is to involve scientific research in teaching and strengthening the faculty at KGPPI. Criterion for participation in the program is the relevance of the thesis topic. In addition, the defense of the candidate\'s thesis is planned no later than two years. Research and training are carried out in KGPPI. The candidate undertakes to teach and conduct research at KGPPI for at least three years.</string>
    <string name="master_graduate_sphere_research">Spheres of research:</string>
    <string name="master_graduate_sphere_research_description">The project supports research activities in the following areas:\n
• Information Security\n
• Applied computer science - mobile systems\n
The management of the research topics is conducted by the dean of the Faculty of CGAPI, Dr. A. Abdulaev</string>
    <string name="master_graduate_form_of_support">Form of support:</string>
    <string name="master_graduate_form_of_support_description">• Fee for conducting research in KGPPI in the amount of 250,00 € per month. At the same time, 50% of the workload must be allocated for scientific research;\n
• Scientific internship with a duration of up to 3 months at the University of Zwickau. Travel expenses up to 700 € are paid from the project and a monthly stipend of 1.000 € is provided. Of this amount, the same must be purchased health insurance in Germany.</string>
    <string name="master_graduate_required_docs">Required documents (in English or German):</string>
    <string name="master_graduate_required_docs_description">• Completed application form;\n
• Detailed written presentation (Exposè) on the topic of dissertation work;\n
• A letter of recommendation from the chief executive;\n
• Summary;\n
• Certificate certifying knowledge of German or English at level B1.</string>
    <string name="master_graduate_selection_com">Selection Commission:</string>
    <string name="master_graduate_selection_com_description">• Dean of the CGAPI, Dr. Abdulaev A.A.;\n
• Project Manager of DAAD.</string>
    <string name="master_graduate_app_deadline">Application deadline:</string>
    <string name="master_graduate_app_deadline_description">• no later than August 31, 2018;\n
• send to kgfi.project@gmail.com\n
The results of the selection will be known on September 15, 2018.\n
If you have any questions, please contact: kgfi.project@gmail.com</string>
    <string name="master_requirements">Requirements for admission:</string>
    <string name="master_requirements_a">Requirements on the specialty:</string>
    <string name="master_requirements_a_description">Bachelor\'s degree or computer scientist with 75% performance over the past two years. A bachelor\'s degree or a technical degree is also accepted with an academic achievement of 85% in subjects related to computer science over the last two years of training. These competences must be documented. Professional programming activities can be recognized as fulfilling the criterion for admission. If necessary, the student must listen to the courses on in-depth programming and software development in the Bachelor\'s degree program of KGPPI or Alatoo University. These compulsory courses are read not in the evening or on the weekends. For possible courses, a fee is charged in addition to the principal amount of the tuition fee.</string>
    <string name="master_requirements_b">Requirements for foreign languages:</string>
    <string name="master_requirements_b_description">▪ English B2 or\n
▪ English B1 or German B2\n
The level of English is determined by the teachers of the University of Alatoo.\n
The level of German language proficiency is determined by the teachers of KGFPI KGUSTA</string>
    <string name="master_docs">List of documents required for admission:</string>
    <string name="master_docs_description">Documents for admission to the magistracy\n
1. Application\n
2. The original of the bachelor\'s degree (specialist) with the application of the extract from the record sheet\n
3. Copy of the Diploma Supplement\n
4. 2 pictures of 3x4\n
5. Copy of passport (original for viewing)\n
6. The contract\n
7. Personal account of personnel</string>
    <string name="master_note">Note for international students:</string>
    <string name="master_note_description">Note to foreign citizens\n
Translation of the passport, diploma and its insert into Kyrgyz or Russian (the translation must be confirmed by a certified notary or translation firms).</string>
    <string name="master_deadline">Deadline:</string>
    <string name="master_deadline_description">Documents for admission to the Master\'s program are accepted until September 30, 17\n
        at the International University of Alatoo, at the address: Bishkek, Tunguch microdistrict, Ankara str., 1/8\n
Telephones for information: 0312 54-92-38, 0312 63-14-25</string>
</resources>