<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.comaiu.daniyar.comalatoomobile.ui.custom_views.TextFontHeader
            android:text="@string/master_graduate_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_margin="8sp"/>
        <TextView
            android:text="@string/master_graduate_project_daad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="7sp"/>
        <TextView
            android:text="@string/master_graduate_project_daad_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp" />
        <TextView
            android:text="@string/master_graduate_aim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="7sp"/>
        <TextView
            android:text="@string/master_graduate_aim_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp" />
        <TextView
            android:text="@string/master_graduate_sphere_research"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="7sp"/>
        <TextView
            android:text="@string/master_graduate_sphere_research_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp" />
        <TextView
            android:text="@string/master_graduate_form_of_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="7sp"/>
        <TextView
            android:text="@string/master_graduate_form_of_support_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp" />
        <TextView
            android:text="@string/master_graduate_required_docs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="7sp"/>
        <TextView
            android:text="@string/master_graduate_required_docs_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp" />
        <TextView
            android:text="@string/master_graduate_selection_com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="7sp"/>
        <TextView
            android:text="@string/master_graduate_selection_com_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp" />
        <TextView
            android:text="@string/master_graduate_app_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="7sp"/>
        <TextView
            android:text="@string/master_graduate_app_deadline_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"
            android:layout_marginBottom="10sp"/>

    </LinearLayout>

</ScrollView>