<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp">
        <RadioButton
            android:id="@+id/buttonFirstA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_a"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/buttonFirstB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_b"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/buttonSecondA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_a"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/buttonSecondB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_b"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/buttonThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/buttonForth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forth"
            android:textSize="20sp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/radioGroup"
        android:weightSum="2">
        <Button
            android:id="@+id/buttonSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/button_timetable"
            android:textSize="17sp"/>
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/button_timetable"
            android:textSize="17sp"/>
    </LinearLayout>

</RelativeLayout>