<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.example.daniyar.comalatoomobile.ui.custom_views.TextFontHeader
            android:text="@string/master_requirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_margin="8sp"/>
        <TextView
            android:text="@string/master_requirements_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="8sp"
            android:layout_marginStart="5sp"/>
        <TextView
            android:text="@string/master_requirements_a_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"/>
        <TextView
            android:text="@string/master_requirements_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="8sp"
            android:layout_marginStart="5sp"/>
        <TextView
            android:text="@string/master_requirements_b_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"/>
        <TextView
            android:text="@string/master_docs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="8sp"
            android:layout_marginStart="5sp"/>
        <TextView
            android:text="@string/master_docs_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"/>
        <TextView
            android:text="@string/master_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="8sp"
            android:layout_marginStart="5sp"/>
        <TextView
            android:text="@string/master_note_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"/>
        <TextView
            android:text="@string/master_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="8sp"
            android:layout_marginStart="5sp"/>
        <TextView
            android:text="@string/master_deadline_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"
            android:layout_marginBottom="10sp"/>

    </LinearLayout>
</ScrollView>