<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/master_form_of_study"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10sp"/>
        <TextView
            android:text="@string/master_evening"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"/>
        <TextView
            android:text="@string/master_schedule_of_classes"
            android:textSize="23sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"/>
        <TextView
            android:text="@string/master_schedule_one"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"/>
        <TextView
            android:text="@string/master_schedule_two"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"/>
        <TextView
            android:text="@string/master_schedule_three"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"/>
        <TextView
            android:text="@string/master_schedule_four"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"/>
    </LinearLayout>


</ScrollView>