<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/kgfi"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/zwickau"
            android:adjustViewBounds="true"/>
        <TextView
            android:text="@string/master_joint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginTop="15sp"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"/>
        <TextView
            android:text="@string/master_joint_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp" />
        <TextView
            android:text="@string/master_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10sp"/>
        <TextView
            android:text="@string/master_first_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp" />
        <TextView
            android:text="@string/master_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10sp"/>
        <TextView
            android:text="@string/master_second_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp" />
        <TextView
            android:text="@string/master_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10sp"/>
        <TextView
            android:text="@string/master_term_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp" />
        <TextView
            android:text="@string/master_with_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5sp">
            <ImageView
                android:src="@drawable/daad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"/>
            <ImageView
                android:src="@drawable/bmbf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>